force-app/main/default/objects/ssot__CareBarrierType__dlm/fields/ssot__CareBarrierCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareBarrierCodeText__c</fullName>
    <label>Care Barrier Code Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareBarrierCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>