force-app/main/default/objects/ssot__CareBarrierType__dlm/fields/ssot__CareBarrierCodeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareBarrierCodeType__c</fullName>
    <label>Care Barrier Code Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareBarrierCodeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>