force-app/main/default/objects/ssot__CareBarrierType__dlm/fields/ssot__DiagnosisCodeSetBundleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosisCodeSetBundleId__c</fullName>
    <label>Diagnosis Code Set Bundle</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosisCodeSetBundleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>