force-app/main/default/objects/ssot__CareBarrierType__dlm/fields/ssot__rel_1716726578934_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726578934_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareBarrierType_HealthCareDiagnosisI_rel</label>
    <referenceTo>ssot__HealthcareDiagnosis__dlm</referenceTo>
    <relationshipLabel>CareBarrierType_HealthCareDiagnosisI_rel</relationshipLabel>
    <relationshipName>rel_1716726578934_end</relationshipName>
    <type>Lookup</type>
</CustomField>